# GM-Aggregation

./: .pre-commit-config.yaml  README.md  agg_to_student_level.ipynb  aggregate.py  main.py  preprocess.py  pyproject.toml  requirements.txt  sanity_checks.ipynb  utils.py
src/gm_aggregation/: __init__.py  aggregate.py  cli.py  generate_classifications.py  generate_graph.py  pipeline.py  preprocess.py  utils.py
