[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "gm-aggregation"
version = "0.1.0"
description = "Aggregation of Graspable Math Research Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.6.0",
    "distributed>=2024.0.0",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "py-asciimath>=0.3.0",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[project.scripts]
gm-aggregation = "gm_aggregation.cli:main"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "bokeh>=3.9.1",
    "pre-commit>=4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gm_aggregation"]
